[project]
name = "eventloop-debug"
version = "0.1.0"
description = ""
authors = [
    {name = "qudgus8672@publicai.co.kr",email = "qudgus8672@publicai.co.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
